# CSII

./: CMakeLists.txt  GravityProvider.cpp  GravityProvider.h  QuadTree.cpp  QuadTree.h  SimpleTransform.vertexshader  SingleColor.fragmentshader  disk.cpp  disk.h  graphics.cpp  graphics.h  gravity.cpp  gravity.h  main.cpp
GravityProvider/: CartesianBruteForceSelfGravityProvider.cpp  CartesianBruteForceSelfGravityProvider.h  ExclusionDifferentialPolarTreeSelfGravityProvider.cpp  ExclusionDifferentialPolarTreeSelfGravityProvider.h  ExclusionPolarTreeSelfGravityProvider.cpp  ExclusionPolarTreeSelfGravityProvider.h  ExclusionSublevelPolarTreeSelfGravityProvider.cpp  ExclusionSublevelPolarTreeSelfGravityProvider.h  GravityProvider.cpp  GravityProvider.h  PolarBruteForceSelfGravityProvider.cpp  PolarBruteForceSelfGravityProvider.h  PolarTreeSelfGravityProvider.cpp  PolarTreeSelfGravityProvider.h  SimplePolarTreeSelfGravityProvider.cpp  SimplePolarTreeSelfGravityProvider.h  StellarGravityProvider.cpp  StellarGravityProvider.h
python/: Plot-Errors.ipynb
